# whstlrs

./: .gitignore  Cargo.toml  README.md
contrib/lilypond/: fingering.ly  singlemoment.ly
contrib/starofthecountydown/: starofthecountydown-unnamed-staff.notes  starofthecountydown.abc  starofthecountydown.ly  starofthecountydown.midi  starofthecountydown.notes  whstlrs.ly
src/: main.rs
wgpu-jumpstart/src/: render_pipeline_builder.rs
whistletab/: Cargo.toml
whistletab/src/: main.rs
whstlrs/: Cargo.toml
whstlrs/src/: context.rs  input_manager.rs  main.rs  output_manager.rs  song.rs
whstlrs/src/render/: mod.rs
whstlrs/src/render/sheet/: mod.rs
whstlrs/src/render/sheet/pipeline/: mod.rs  shader.wgsl
whstlrs/src/scene/: midi_player.rs  mod.rs  playing_scene.rs
whstlrs/src/utils/: musicplayer.rs
