[package]
name = "whstlrs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu-jumpstart.workspace = true
env_logger.workspace = true
futures.workspace = true

winit = { version = "0.29.15", features = ["rwh_05"] }
