[package]
name = "whstlrs"
version = "0.1.0"
edition = "2021"
default-run = "whstlrs"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu-jumpstart.workspace = true
env_logger.workspace = true
futures.workspace = true
log.workspace = true
bytemuck.workspace = true

winit = { version = "0.29.15", features = ["rwh_05"] }
lyon = "1.0"
resvg = "0.41"
csv = "1.3.0"
midly = "0.5.3"
rodio = "0.17.3"
